--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="alonedroid.com.calmemo" >
+          package="alonedroid.com.calmemo">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".CmApplication"
@@ -11,37 +11,39 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".MainActivity_" >
+        <activity android:name=".MainActivity_">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <activity android:name=".scene.calendar.CmCalendarActivity" />
-        <activity android:name=".scene.cover.CmCoverActivity" />
         <activity
             android:name=".activity.CmCameraActivity"
-            android:theme="@style/AppTheme.Translucent" />
+            android:theme="@style/AppTheme.Translucent"/>
 
-        <receiver android:name=".widget.CmWidgetProvider" >
+        <receiver android:name=".widget.CmWidgetProvider">
             <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
 
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/cm_widget_provider" />
+                android:resource="@xml/cm_widget_provider"/>
         </receiver>
-        <receiver android:name=".widget.CmWidgetIntentReceiver" >
+        <receiver android:name=".widget.CmWidgetIntentReceiver">
             <intent-filter>
-                <action android:name="android.intent.action.ACTION_WIDGET_CM_CAMERA" />
+                <action android:name="android.intent.action.ACTION_WIDGET_CM_CAMERA"/>
             </intent-filter>
 
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/cm_widget_provider" />
+                android:resource="@xml/cm_widget_provider"/>
         </receiver>
+
+        <activity android:name=".scene.album.CmAlbumActivity"/>
+        <activity android:name=".scene.calendar.CmCalendarActivity"/>
+        <activity android:name=".scene.cover.CmCoverActivity"/>
     </application>
+
 </manifest>
