--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,11 @@ buildscript {
     }
     dependencies {
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
-        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
         classpath 'me.tatarka:gradle-retrolambda:2.5.0'
     }
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'com.jakewharton.hugo'
 apply plugin: 'android-apt'
 apply plugin: 'me.tatarka.retrolambda'
 
@@ -47,7 +45,10 @@ apt {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'io.realm:realm-android:0.80.0'
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    apt "org.androidannotations:androidannotations:3.2"
+    compile 'com.android.support:support-v13:21.0.0'
+    compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'org.androidannotations:androidannotations-api:3.2'
+    apt "org.androidannotations:androidannotations:3.2"
+    provided 'org.projectlombok:lombok:1.14.2'
+    apt "org.projectlombok:lombok:1.14.2"
 }
