画像の取り込みを実装

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".scene.album.CmAlbumActivity_"/>
         <activity android:name=".scene.calendar.CmCalendarActivity_"/>
         <activity android:name=".scene.photographs.CmPhotographsActivity_"/>
+        <activity android:name=".activity.CmGalleryActivity_"/>
         <activity
             android:name=".activity.CmCameraActivity_"
             android:theme="@style/AppTheme.Translucent"/>
