--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,20 @@ apt {
     }
 }
 
+android {
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'io.realm:realm-android:0.80.0'
     compile 'com.android.support:support-v13:21.0.0'
     compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.google.android.gms:play-services:7.0.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.4'
     compile 'org.androidannotations:androidannotations-api:3.2'
     apt "org.androidannotations:androidannotations:3.2"
     provided 'org.projectlombok:lombok:1.14.2'
