--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="alonedroid.com.calmemo">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
@@ -21,10 +23,14 @@
         <activity android:name=".scene.album.CmAlbumActivity_"/>
         <activity android:name=".scene.calendar.CmCalendarActivity_"/>
         <activity android:name=".scene.photographs.CmPhotographsActivity_"/>
+        <activity android:name=".scene.hint.CmHintActivity_"/>
         <activity android:name=".activity.CmGalleryActivity_"/>
         <activity
             android:name=".activity.CmCameraActivity_"
             android:theme="@style/AppTheme.Translucent"/>
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
 
         <receiver android:name=".widget.CmWidgetProvider">
             <intent-filter>
